# paperback

./: .clog.toml  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .readthedocs.yml  Containerfile  Dockerfile  README.md  changelog.md  compose.prod.yaml  compose.yaml  docker-compose.dev.yml  docker-compose.yml  prod.Containerfile  pyproject.toml
.devcontainer/: compose.extend.yaml  devcontainer.json
.github/: dependabot.yml
docs/: conf.py  index.md  index.rst  test.rst
src/container/: Containerfile  Dockerfile  compose.dev.yaml  create_auth_user_and_db.sh  docker-compose.yml  entrypoint.sh  init_psql_db.sh  install_deps.sh  poetry_entrypoint.sh  uvicorn_log.json
src/docker/: entrypoint.sh  init_graph_db.sh
src/docs/: conf.py
src/documentation/: conf.py  developing.md
src/paperback/: __init__.py  __main__.py  __version__.py  app.py  cli.py  core.py  exceptions.py  scripts.py  settings.py  util.py
src/paperback/abc/: __init__.py  analyzer.py  auth.py  base.py  docs.py  misc.py  models.py
src/paperback/auth/: __init__.py  crud.py  database.py  jwt.py  logging.py  models.py  orm.py  router.py  schemas.py  settings.py
src/paperback/docs/: __init__.py  analyze.py  crud.py  database.py  logging.py  router.py  schemas.py  settings.py
src/paperback/docs/analyzers/: __init__.py  abc.py  implementation.py
src/paperback/docs/crud/: __init__.py  corp.py  dict.py  docs.py
src/paperback/exceptions/: __init__.py  auth.py  core.py  docs.py
src/paperback/pt_abc/: __init__.py  auth.py  base.py  docs.py  misc.py  texts.py
src/paperback/std/: __init__.py
src/paperback/std/auth/: __init__.py  auth_implemented.py
src/paperback/std/docs/: __init__.py  analyzers.py  docs_implemented.py  tasks.py
src/paperback_docs/: conf.py  developing.md  index.md  requirments.txt  source_code.md
src/papertext_docs/: conf.py  test.md
tests/: test_paperback.py
