[tool.poetry]
name = "paperback"
version = "0.2.0"
description = ""
authors = ["Danil Kireev <danilunrandom@gmail.com>"]
license = "MIT"
readme="README.md"
homepage="https://github.com/PaperText/paperback"
repository="https://github.com/PaperText/paperback"
documentation="https://paperback.readthedocs.io/en/latest/"
classifiers=[
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
"Source Code" = "https://github.com/PaperText/paperback#container"
"Issue Tracker" = "https://github.com/PaperText/paperback/issues"
"Documentation" = "https://paperback.readthedocs.io/en/latest/?badge=latest"
"Homepage" = ""

[tool.poetry.scripts]
paperback = "paperback.cli:cli"
fix = "paperback.__main__:Scripts.fix"
lint = "paperback.__main__:Scripts.lint"
docs-build = "paperback.__main__:Scripts.docs_build"
docs-clean = "paperback.__main__:Scripts.docs_clean"

[tool.poetry.dependencies]
python = "^3.7"
python-configuration = {extras = ["toml"], version = "^0.6.0"}
uvicorn = "^0.10.8"
email-validator = "^1.0"
pydantic = "^1.4"
python-multipart = "^0.0.5"
fastapi = "^0.60.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7"
flakehell = "^0.3.2"
flake8-fixme = "^1.1"
pep8-naming = "^0.9.1"
black = "19.10b0"
isort = "^4.3"
mypy = "^0.761"
rope = "^0.16.0"
recommonmark = "^0.6.0"
sphinx = "^2.4.4"
sphinx_rtd_theme = "^0.4.3"

[tool.flakehell]
exclude = ["__pycahce__"]
format = "grouped"
show_source = true
max_line_length = 79

[tool.flakehell.plugins]
"flake8-*" = ["+*"]
"pep8-naming" = ["+*"]
"mccabe" = ["+*"]
"pycodestyle" = ["+*"]
"pyflakes" = ["+*"]
"pylint" = ["+*"]

[tool.black]
target-version = ['py38']
line_length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
balanced_wrapping = true
length_sort = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
