[tool.poetry]
name = "paperback"
version = "0.2.0"
description = ""
authors = ["Danil Kireev <danilunrandom@gmail.com>"]
license = "MIT"
readme="README.md"
homepage="https://github.com/PaperText/paperback"
repository="https://github.com/PaperText/paperback"
documentation="https://paperback.readthedocs.io/en/latest/"
classifiers=[
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = ["LICENSE", "pyproject.toml"]

[tool.poetry.urls]
"Source Code" = "https://github.com/PaperText/paperback#container"
"Issue Tracker" = "https://github.com/PaperText/paperback/issues"
"Documentation" = "https://paperback.readthedocs.io/en/latest/?badge=latest"
"Homepage" = ""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
paperback = "paperback.__main__:cli"
fix = "paperback.__main__:Scripts.fix"
lint = "paperback.__main__:Scripts.lint"
docs-build = "paperback.__main__:Scripts.docs_build"
docs-clean = "paperback.__main__:Scripts.docs_clean"

[tool.poetry.dependencies]
python = "^3.7"
python-configuration = {extras = ["toml"], version = "^0.8.0"}
uvicorn = "^0.12.0"
email-validator = "^1.0"
pydantic = "^1.4"
python-multipart = "^0.0.5"
fastapi = "^0.61.0"
toml = "^0.10.1"
uvloop = {version = "^0.14.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.0"
flake8 = "^3.7"
flakehell = "^0.7.0"
flake8-fixme = "^1.1"
pep8-naming = "^0.11.1"
black = "19.10b0"
isort = "^5.3"
mypy = "^0.782"
rope = "^0.18.0"
recommonmark = "^0.6.0"
sphinx = "^3.2.0"
sphinx_rtd_theme = "^0.5.0"

[tool.poetry.extras]
fast_loop = ["uvloop"]

[tool.flakehell]
exclude = ["__pycahce__"]
format = "grouped"
show_source = true
max_line_length = 79

[tool.flakehell.plugins]
"flake8-fixme" = ["+*"]
"pep8-naming" = ["+*"]
"mccabe" = ["+*"]
"pycodestyle" = ["+*"]
"pyflakes" = ["+*"]
"pylint" = ["+*"]

[tool.black]
target-version = ['py38']
line_length = 79

[tool.isort]
profile="black"
force_alphabetical_sort_within_sections=true
skip_gitignore=true
color_output=true

[tool.mypy]
plugins = "pydantic.mypy"
